格式化输入输出，

--- a/1-数据类型、运算符、表达式/1-1常量和变量，整形，实型，字符型.md
+++ b/1-数据类型、运算符、表达式/1-1常量和变量，整形，实型，字符型.md
@@ -5,3 +5,332 @@ c语言包含的数据类型如下
 ![](../img/impicture_20220125_202135.png)
 
 ![](../img/impicture_20220125_202339.png)
+
+# 1.常量和变量的概念
+
+程序执行过程中其值不能发生改变的量叫做常量，其值能发生改变的量叫做变量。常量可以直接使用，而变量则必须先定义后才能使用，否则编译器会报错。
+
+https://www.cnblogs.com/cxyjczs/p/10145843.html
+
+# 2.常量和变量的命名规范
+
+在介绍常量和变量的命名规范之前，我们先了解一下什么是标识符和关键字。
+
+### 2.1 标识符
+
+标识符，用来标识符号常量名、变量名、函数名、数组名、文件名、类名、对象名等。简单的将就是大家取的名字~~有效标识符的构成规则如下：
+
+- 1）第一个字符必须是字母（大小写都行）或下划线，不能是数字;
+- 2）后跟字母（大小写都行）、下划线或数字组成;
+- 3）标识符中的大小写字母有区别。如，变量sum,Sum,SUM代表三个不同的变量；
+- 4）不能与编译系统已经预定义的、具有特殊用途的保留标识符（即关键字）同名。比如，不能将标识符命名int,char,float,break,case,for,while,return等等；
+  下面列出几个有效的标识符：
+
+```c
+teemo    
+Garen
+move_name
+dj8023  
+_temp  
+i
+the_hero_is_Garen
+```
+
+下面列出几个无效的标识符：
+
+```c
+8times    //第一个字符必须是字母（大小写都行）或下划线，不能是数字。
+price/tea    //后跟字母（大小写都行）、下划线或数字组成，/不是属于之中。
+my name    //含有空格
+x+y    //包含了'+'号
+int    //C语言程序中的关键字
+```
+
+### 2.2 关键字
+
+C语言中具有特殊含义的英文单词，通常用于构成语句，存储数据，定义数据类型等。下面列出了C语言中的一些保留字。这些保留字不能作为常量名、变量名或其他标识符名称。
+
+- 1）基本数据类型
+  int：声明整数类型
+  float：声明浮点型
+  double：声明双精度浮点型
+  char：声明字符类型
+  void：空类型，声明函数无返回值或无参数
+- 2）流程控制
+  条件判断：if、else、switch、case、default等
+  循环：while、do、for、break、continue
+  返回：return
+
+在本节中，先了解一下就行，有很多不明白的关键字后面会讲到。
+
+### 2.3 命名规范
+
+首先，必须是有效的标识符。在这个基础上，我们使用的命名最好能做到看名字就明白它表示什么。如果要使用一个变量来表示teemo的血量，我们可以将其命名为teemo_hp或者teemoHp，而不是随便的命名为a或者b之类的。遇到两个或者更多的单词组成的名称，我们通常用下划线字符将它们连接起来，或者从第二单词开始将每一个单词的第一个字母大写。
+
+还有一些程序员可能会在变量中加入描述变量类型或者内容的前缀。例如，可以将整型变量teemoHp命名为nTeemoHp,其中n表示整数值。这样做的好处是在你遇到这个变量的时候，可以很直接的知道这个变量的类型。常用的几种前缀有：c(表示单个字符)、p(表示指针)等。另外，常量的标识符习惯用大写字母表示，变量的标识符习惯用小写字母表示。单下划线打头的标识符一般代表标准数据库的变量，双下划线打头的标识符一般代表编译器的变量。
+
+关于命名，想说的是，命名可以根据自己的需要、喜好和个人风格来使用，但起码要保证一个程序里面的风格是一致性的。在团队共同开发中，则需要按照规范进行命名。规范的命名不仅可以让自己以后看的明白，也利于给团队其他人维护代码。
+
+# 3.常量
+
+### 3.1 直接常量
+
+直接常量又可以叫做字面常量，通过数据来直接表现。在C语言中，编译器会自动根据字面常量的表示形式确定其类型。例如：
+
+```c
+y = x + 3;
+```
+
+在上面的程序中，3将会被编译器作为int类型的常量。再例如：
+
+```c
+y = x + 3.0;
+```
+
+3.0是小数，则会被编译器作为float类型的常量。当然，字符也有常量，不过和整型常量不同，字符常量必须使用单引号来进行表示。字符常量是使用单引号括起来的一个字符，不能是多个字符。例如，下面都是合法的字符常量：
+
+```c
+'a'、'B'、'#'、'8'
+```
+
+需要强调的是只能是单引号，并且只有一个字符，字符可以是ASCII码中的任意字符。如果数字被定义成字符常量的话，就不能代表数字字面的量了。如果参与运算，它的值将会是对应的ASCII码。比如上面的字符常量'8'，在ASCII码对应的值为56。这个时候参与运算，比如加上1，将得到的整数值是57。
+
+### 3.2 符号常量
+
+在C语言程序中，还可以使用一个符号常量来代替常量。使用符号常量有两个好处，一个是如果需要修改常量的话，只要修改定义符号常量的语句就行；另一个好处，使得程序中常量的含义更加清楚。定义符号常量有两种方法：#define宏定义和const语句定义。在这里我就先不展开讲了，大家过一眼就好了，后面的教程会详细的讲解宏定义和const的应用。
+
+# 4.变量
+
+在程序中，我们会使用到各种变量。当我们创建一个变量时，就会在内存中开辟一些空间。一般变量先声明，然后初始化。
+
+### 4.1 声明变量
+
+C语言中使用声明语句，来声明一个变量，指出存储类型并提供位置标签。C语言中，变量要求先声明后定义，这样做的好处在于：
+
+- 1.确保后面引用的变量名和声明的一致，减少了输入错误。如声明了变量teemo，在后面引用时，不小心输成了timo，编译器将会报错，指示timo未声明。
+- 2.在声明变量时，会指定变量的类型，当进行运算的时候，编译器就可以检查运算是否合法。
+- 3.编译器根据指定变量的类型分配内存。
+
+声明变量的一般语法格式：
+
+```c
+类型 变量名;
+```
+
+其中，类型是数据类型的关键字，比如说int表示整数类型、double表示双精度浮点类型。变量名则需要符合命名规范的标识符。下面我们将会通过简单的程序，来介绍如何声明变量。比如说：我们要声明一个变量表示提莫的血量。在C语言中，就可以表示：
+
+```c
+int teemoHp;
+float teemoAttack;
+```
+
+int 是一种数据类型，表示是整数。
+teemoHp 是一个标识符，这里代表整数类型的血量。
+; 表示一个语句结束。
+
+我们从计算机的角度来讲，第一条语句指出程序需要一个存储空间，用这个内存来存储一个整数。那么在C语言中，写上这个声明语句，程序就会将计算机的某一区域内存，命名为teemoHp，并在这个内存中存放整数类型。teemoHp这个标识符就是一个变量，它代表teemo的血量。这条语句创造了一个变量teemoHp，我们把这个过程叫做变量声明。
+
+同类型的变量还可以在一个语句中同时声明多个变量，各变量之间用逗号分隔开，例如:
+
+```c
+int teemoHp, garenHp;
+```
+
+上面语句声明了两个整数类型的变量，等同于：
+
+```c
+int teemoHp;
+int garenHp;
+```
+
+### 4.2 变量初始化
+
+在对变量声明时，编译器会给变量分配内存，但分配的这个内存并不会被清空。这个就和你删除电脑中的文件一样，虽然你点了删除这些文件，但实际上这些文件还会存在，只是我们看不到了。只有当你再次存储文件覆盖这些文件时，这些文件才算是删除了。这也是一些删除的文件，也可以通过某些手段来恢复的重要原因。那么就可能出现编译器给我们分配的内存，已经有存储值的情况，而且这个值对我们来说还是不确定的。为了防止程序因为不确定的值而出现不可预料的情况，我们在使用变量的时候就要对其进行赋初值，使得变量的值是确定的，这种方法就是初始化。
+
+下面再来看一个简单的实例，我们要把提莫的血量作为一个变量，提莫的血量值是586。在C语言中，就可以表示成：
+
+```c
+int teemoHp;
+teemoHp = 586;
+```
+
+我们先声明了一个变量teemoHp，然后将常量586保存到变量teemoHp中。第二个语句中，“=”也叫赋值操作符，这个过程叫做赋值。赋值是指数据放到内存的过程，我们把这个过程叫做变量的赋值；又因为是第一次赋值，也称变量的初始化。
+
+在声明变量的同时可以直接对其进行赋值，上面的两个语句，又可以直接表示成：
+
+```c
+int teemoHp = 586;
+```
+
+如果多个变量具有相同的值，还可以进行连续的赋值。例如：
+
+```c
+int teemoHp, garenHp;
+teemoHp = garenHp = 586;
+```
+
+但不可以在声明的时候对其进行连续赋值。像下面语句一样：
+
+```c
+int teemoHp = garenHp = 586;//报错
+```
+
+这样写会导致标识符garenHp没有声明，所以编译器报错。
+
+如果要在一个语句中这样做，我们应该写成下面语句：
+
+```c
+int teemoHp = 586, garenHp = 586;
+```
+
+我们还可以写成：
+
+```c
+int teemoHp, garenHp = 586;
+teemoHp = 586;
+```
+
+我们知道，在实际中，提莫通过等级的提升以及出的装备，血量的值会不断变化，那我们应该怎么办呢？答案是，血量的值是一个变量，我们可以通过再次赋值改变血量的值，例如：
+
+```c
+int teemoHp = 586;
+teemoHp = 1000;
+teemoHp = 5000;
+```
+
+再次的赋值，会把第一次的数据覆盖掉。也就是说，teemoHp中最后的值是5000（这怕不是一个肉提莫），这也是因为586、1000已经被覆盖掉了。
+
+---
+
+# 1.数据类型
+
+在C语言中，数据类型指的是用于声明不同类型的变量或函数的一个广泛的系统。C语言数据类型可以分为四种：
+
+- 1.基本类型：
+  它们是算术类型，包括两种类型：整数类型和浮点类型。
+- 2.枚举类型：
+  它们也是算术类型，被用来定义在程序中只能赋予其一定的离散整数值的变量。
+- 3.void 类型：
+  类型说明符 void 表明没有可用的值。
+- 4.派生类型：
+  它们包括：指针类型、数组类型、结构类型、共用体类型和函数类型。
+
+本节内容主要学习的是基本类型，以及简单的介绍一下void类型。其他的类型在后续的章节中，将会慢慢的接触到，不用太担心。
+
+# 2.整数类型
+
+### 2.1 int型
+
+int类型，就是没有小数的部分，比如2、500、0、-100。
+用法如下：
+
+```c
+int timoHp = 586;//timo的血量是586；
+```
+
+### 2.2 char型
+
+char类型用于存放一个字符，值用两个单引号''来表示 (双引号表示字符串)。编程语言通过使用字母的数值编码来解决字母的存储，因此char类型是另一种整型。字符集的字符用数值编码（ASCII码）表示。例如，字符'A'的编码是65，字符'B'的编码是66。
+用法如下：
+
+```c
+//char 只能存放一个字符，超过一个字符就会产生编译错误
+char c = 'a'; 
+char c1 = '盖';
+char c2 = '伦'; 
+```
+
+### 2.3 bool型
+
+在计算中，bool变量的值可以是true或false。我们经常将非零值解释为true,将零解释为false。举一个简单的例子，我们可以这样编写语句：
+
+```c
+bool timoLive = true;
+```
+
+字面值true和false都可以通过提升类型转换为int类型，true被转换为1，而false被转换为0：
+
+```c
+int timoLive = true;//stick的值是1
+int timoKill = false;//egg的值是0
+```
+
+另外，任何非零值都可以转换为true，而非零被转换为false:
+
+```c
+bool timoHp = 586;//timoHp的值是true
+bool timoSpeed = -10;//timoSpeed的值是true
+bool timoAttack = 0;//timoAttack的值是false
+```
+
+# 3.浮点类型
+
+浮点数能够表示带小数部分的数字，它们的表示范围也更大。浮点数在计算机中的存储分两部分，一部分表示值，另一部分用于对值进行放大或缩小。举个简单的例子来帮助大家理解计算机中的浮点数，比如说过情人节了，我们给女朋友发个红包表示一下心意。我们需要表示的数额分别是13.14和1314，它们除了小数点的位置不同外，其他都是相同的（帮你们找了一个极好的借口）。至少计算机是这样看的，至于女朋友怎么看~~~在计算机中，第一个数可以表示为0.1314（基准数）和100（缩放因子），第二个数可以表示为0.1314（基准数）和10000（缩放因子）。缩放因子的作用就是移动小数点的位置，这其实也是浮点数术语的来源。计算机中的实际表示其实不是这样的十进制，而是基于二进制，这里我们简单的明白这个原理就行了。
+
+### 3.1 书写浮点数
+
+浮点数的书写方法有两种，一种是我们使用的标准小数点表示法：
+
+> 3.14
+> 5.0
+> 0.52
+
+第二种是E表示法：
+
+> 3.14E+2			==  3.14 * 10 ^ 2
+> 1.26e-4				== 1.26 * 10 ^ (-2)
+> 5E6					== 5 * 10 ^ 6
+> -20.18E10		== (-20.18) * 10 ^ 10
+> 3.14E+2			== 3.14 * 10 ^ 2
+
+上面的数字就是E表示法，比如说3.14E+3，这里的意思是3.14的小数点向右移动3位。其中前面的符号位可以是正号(+)或者负号(-)，小数点也是可选的，可以使用E或者e,后面的符号可以是+、-或者省略，后面的数字代表移动的位数。
+
+### 3.2 单精度浮点数(float)和双精度浮点数(double)
+
+浮点数根据范围和精度不同分为两种:单精度浮点数(float)和双精度浮点数(double)。一般来说，处理单精度浮点数的速度比处理双精度浮点数快。**浮点数数据在内存中是以指数形式存储（也就是上面的 第二种E表示法）**
+
+- 单精度浮点数一般占4个字节,32位。单精度浮点数1位符号位，8位指数，23位小数。float的小数位只有23位，能表示的最大十进制数为2的23次方，即8 388 608，相当于十进制的7位，严格点说，精度只能百分百的保证十进制的6位。所以我们一般说有效数字是8位。单精度浮点的表示范围：-3.40E+38 ~ +3.40E+38。
+- 双精度浮点数一般占8个字节，64位。双精度浮点数1位符号位，11位指数，52位小数。小数位能表示的最大十进制数为2的52次方，即4 503 599 627 370 496。这是一个16位数，所以精度能百分百的保证十进制的15位。所以有效数字为16位。双精度浮点的表示范围：-1.79E+308 ~ +1.79E+308。
+
+简单的用法如下：
+
+```c
+float timoArmor = 150.7; //timo的护甲是150.7,查看VS中armor实际的值可以看到是150.699997
+double timoAttackSpeed = 0.865;/*timo的攻击速度是0.865，查看VS中attackSpeed实际的值可以看到是0.86499999999999999*/
+```
+
+与整数相比，浮点数有两大优点。第一个是浮点数可以表示整数之间的值，可以表示小数。第二个是浮点数的表示范围比整数大的多。浮点数也有两个缺点，一个是浮点数运算的速度通常比整数慢，而且精度将降低。下面通过一个简单的程序来说明：
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    float a = 3.14E+22;
+    float b = a + 1.0;
+    
+    printf("%f\n", a);
+    // 31399999573752385896448.000000
+    
+    printf("a == (a + 1.0) ? %d \n", a == (a + 1.0));
+    // a == (a + 1.0) ? 1
+    
+    printf("b-a = %f\n", b-a);
+    // a == (a + 1.0) ? 1
+
+    return 0;
+}
+```
+
+该程序定义一个float类型a，然后b是a+1，试问运行程序b-a是多少？我们认为结果应该为1，但是在我们程序运行结果中，b-a将会是0。产生这个问题的原因就是3.14E+22是一个小数点左边有23位的数字，加上1，就是在第23位加1，但是float类型只能表示8位数字有效，因此对这个值不会有任何影响。
+
+# 4.void类型
+
+void的意思是“无类型”，表示函数没有返回值以及对函数参数做限定。这里如果不理解的话，可以先看看就好了，以后讲到函数就懂了。如果不用void，比如用int或者别的，则函数需要有返回值。void就是不需要结果，否则如int、char等，就必需返回一个与其对应的数据才能编译通过。void不能用来定义变量，让我们试着来定义：
+
+```c
+void a;
+```
+
+这个语句编译时会出错。不过，即使编译不会出错，它也没有任何实际意义。
+
