--- a/8C语言预处理命令.md
+++ b/8C语言预处理命令.md
@@ -156,7 +156,6 @@ int sum(int m, int n);
 ```
 
 
-
 main.c 所包含的代码：
 
 ```c
@@ -617,3 +616,17 @@ int main(){
 
 运行结果：
 sa=12, sb=15, sc=20, vv=60
+
+# 下面是本章涉及到的部分预处理指令：
+
+| 指令     | 说明                                                      |
+| -------- | --------------------------------------------------------- |
+| #        | 空指令，无任何效果                                        |
+| #include | 包含一个源代码文件                                        |
+| #define  | 定义宏                                                    |
+| #undef   | 取消已定义的宏                                            |
+| #if      | 如果给定条件为真，则编译下面代码                          |
+| #ifdef   | 如果宏已经定义，则编译下面代码                            |
+| #ifndef  | 如果宏没有定义，则编译下面代码                            |
+| #elif    | 如果前面的#if给定条件不为真，当前条件为真，则编译下面代码 |
+| #endif   | 结束一个#if……#else条件编译块                              |
